--- a/web/src/scss/styles.scss
+++ b/web/src/scss/styles.scss
@@ -1,2 +1,7 @@
 // Import all of Bootstrap's CSS
 @import "~bootstrap/scss/bootstrap";
+@import "bootstrap/scss/variables";
+
+.bg-darkbule {
+  background-color: $blue-900;
+}
