--- a/web/src/scss/styles.scss
+++ b/web/src/scss/styles.scss
@@ -2,6 +2,6 @@
 @import "~bootstrap/scss/bootstrap";
 @import "bootstrap/scss/variables";
 
-.bg-darkbule {
+.bg-darkblue {
   background-color: $blue-900;
 }
