--- a/static-builder/src/scss/styles.scss
+++ b/static-builder/src/scss/styles.scss
@@ -26,6 +26,36 @@
   animation: slideDown 0.3s ease-out;
 }
 
+.width-5 {
+  width: 5%;
+}
+
+.width-10 {
+  width: 10%;
+}
+
+.width-20 {
+  width: 20%;
+}
+
+.width-35 {
+  width: 35%;
+}
+
+.width-100 {
+  width: 100%;
+}
+
+.text-spacing{
+  letter-spacing: 0.1em;
+}
+
+.avatar {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
 @keyframes slideDown {
   from {
     transform: translateX(-50%) translateY(-100%);
