ヘッダーにユーザーの情報を追加

--- a/static-builder/src/scss/styles.scss
+++ b/static-builder/src/scss/styles.scss
@@ -56,6 +56,14 @@
   border-radius: 50%;
 }
 
+.profile-icon {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+
+
+
 .hidden {
   display: none;
 }
