fix: user profile

--- a/static-builder/src/scss/styles.scss
+++ b/static-builder/src/scss/styles.scss
@@ -50,13 +50,15 @@
   letter-spacing: 0.1em;
 }
 
-.avatar {
+.profile-icon {
   width: 100px;
   height: 100px;
   border-radius: 50%;
+  font-size: 50px;
+  color: white;
 }
 
-.profile-icon {
+.header-profile-icon {
   width: 25px;
   height: 25spx;
   border-radius: 50%;
