マッチ終了時にstore_match_resultで結果を格納する
js format

getの部分も繋ぎ込んだ

Game Records表の崩れを防止

fix: blcに接続・デザイン変更 (#325)

マッチ終了時にstore_match_resultで結果を格納する

js format

getの部分も繋ぎ込んだ

Game Records表の崩れを防止

fix: blcに接続・デザイン変更 (#325)

見た目の微調整

--- a/static-builder/src/scss/styles.scss
+++ b/static-builder/src/scss/styles.scss
@@ -28,18 +28,38 @@
 
 .width-5 {
   width: 5%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .width-10 {
   width: 10%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.width-15 {
+  width:15%;
+  max-width: 15em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .width-20 {
   width: 20%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .width-35 {
   width: 35%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .width-100 {
