--- a/static-builder/src/scss/styles.scss
+++ b/static-builder/src/scss/styles.scss
@@ -34,6 +34,13 @@
   width: 10%;
 }
 
+.width-15 {
+  max-width: 15em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .width-20 {
   width: 20%;
 }
